# navipy-template-repo

./: README.md  pyproject.toml  tox.ini
src/: runme.py
src/CHANGE_ME/: __main__.py
