[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "CHANGE_ME"
authors = [
    {name = "Ed Sweeney", email = "ed@onextent.com"},
]
description = "My CHANGE_ME Python Project"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["json", "generator", "bricks", "rdf"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
]
[project.scripts]
CHANGE_ME = "CHANGE_ME.__main__:main"
